--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,6 +23,15 @@ jobs:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
+          name: Build App
+          command: |
+            chmod +x gradlew
+            ./gradlew assemble
+      - store_artifacts:
+          path: app/build/outputs/apk/
+          destination: build
+          
+      - run:
           name: Run Tests
           command: ./gradlew lint test
       - store_artifacts:
